--- a/kotlin/admanager/NativeAdsExample/app/src/main/AndroidManifest.xml
+++ b/kotlin/admanager/NativeAdsExample/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.google.android.gms.example.nativeadsexample">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.polydice.icook">
 
     <application
         android:allowBackup="true"
@@ -10,7 +11,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-             android:value="ca-app-pub-9939518381636264~1092563270"/>
+             android:value="ca-app-pub-7045820853225151~7326452624"/>
 
         <activity
             android:exported="true"
@@ -22,6 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"
+            tools:replace="android:value" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+
 
     </application>
 
