--- a/kotlin/admanager/NativeAdsExample/build.gradle
+++ b/kotlin/admanager/NativeAdsExample/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
     dependencies {
@@ -18,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        jcenter()
         mavenCentral()
     }
 }
